@@ -289,7 +289,8 @@ public class GordianCoreRandomFactory
 
         /* Remove the specs that are wrong block size and obtain keyTypes */
         mySpecs.removeIf(s -> s.getBlockLength() != GordianLength.LEN_128);
-        final List<GordianSymKeyType> myTypes = mySpecs.stream().map(GordianSymKeySpec::getSymKeyType).collect(Collectors.toList());
+        final List<GordianSymKeyType> myTypes
+                = mySpecs.stream().map(GordianSymKeySpec::getSymKeyType).collect(Collectors.toCollection(ArrayList::new));
 
         /* Determine a random index into the list and obtain the symKeyType */
         int myIndex = theRandom.nextInt(myTypes.size());
@@ -311,7 +312,8 @@ public class GordianCoreRandomFactory
         final List<GordianDigestSpec> mySpecs = myDigests.listAllSupportedSpecs();
         mySpecs.removeIf(s -> !s.getDigestType().supportsLargeData()
                 || s.getDigestLength() != GordianLength.LEN_512);
-        final List<GordianDigestType> myTypes = mySpecs.stream().map(GordianDigestSpec::getDigestType).collect(Collectors.toList());
+        final List<GordianDigestType> myTypes
+                = mySpecs.stream().map(GordianDigestSpec::getDigestType).collect(Collectors.toCollection(ArrayList::new));
 
         /* Determine a random index into the list and obtain the digestType */
         final SecureRandom myRandom = theFactory.getRandomSource().getRandom();
@@ -471,7 +473,7 @@ public class GordianCoreRandomFactory
         return listAllPossibleSpecs()
                 .stream()
                 .filter(supportedRandomSpecs())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -480,7 +482,7 @@ public class GordianCoreRandomFactory
                 .stream()
                 .filter(s -> s.getRandomType().equals(pType))
                 .filter(supportedRandomSpecs())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -492,7 +494,7 @@ public class GordianCoreRandomFactory
                 .filter(s -> s.getRandomType().hasSymKeySpec())
                 .filter(s -> s.getSymKeySpec().getKeyLength() == pKeyLen)
                 .filter(supportedRandomSpecs())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
